syntax = "proto3";

package abi;

// 来自客户端的命令请求
message CommandRequest{
  // oneof·一个
  oneof request_data{
    Hget hget=1;
    Hgetall hgetall = 2;
    Hmget hmget = 3;
    Hset hset = 4;
    Hmset hmset = 5;
    Hdel hdel = 6;
    Hmdel hmdel = 7;
    Hexist hexist = 8;
    Hmexist hmexist = 9;
  }
}

// 服务器的响应
message CommandResponse{
  // 状态码；复用http 2xx/4xx/5xx状态码
  uint32 status =1;
  // 如果不是 2xx，message里包含详细的信息
  string message=2;
  // 成功返回的 values
  repeated Value values=3;
  // 成功返回的 kv Pairs
  repeated Kvpair pairs=4;
}

// 响应返回的值
message Value{
  oneof value{
    string string =1;
    bytes binary=2;
    int64 integer=3;
    double float=4;
    bool bool=6;
  }
}

// 响应返回的 kv pair
message Kvpair{
  string key=1;
  Value value=2;
}


// command: 从 table中获取一个 key，返回value
message Hget{
  string table =1 ;
  string key =2 ;
}

// command: get table all kvpair
message Hgetall{
  string table=1;
}

// 通过数组key获取指定表中的数据
// command: get table key array（ Get a set of keys from a table ）, return value
message Hmget{
  string table =1;
  repeated string keys=2;
}

// save kvpair to table
// if `does not exist`·不存在 table, creact table
message Hset{
  string table=1;
  Kvpair pair=2;
}

// 保存指定 key/value到表中, key不存则创建
// save kvpair to table array
// if `does not exist`·不存在 table, creact table
message Hmset{
  string table=1;
  repeated Kvpair pairs=2;
}

// delete one a key for table, return before value
message Hdel{
  string table=1;
  string key =2;
}

// delete key array for table, return before value
message Hmdel{
  string table=1;
  repeated string keys =2;
}

// examine·查看 whether the key is Already·已经 existed·存在
message Hexist {
  string table =1;
  string key=2;
}


// examine·查看 whether the key array Already·已经 existed·存在
message Hmexist {
  string table =1;
  repeated string keys=2;
}

